[gd_scene load_steps=4 format=3 uid="uid://biy736gk8fvyk"]

[ext_resource type="Shader" path="res://shaders/Background.gdshader" id="1_0rnsf"]
[ext_resource type="Script" path="res://scripts/Level.gd" id="1_kxoog"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eetet"]
shader = ExtResource("1_0rnsf")

[node name="Level" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
script = ExtResource("1_kxoog")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_eetet")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_right = 360.0
grow_horizontal = 2
grow_vertical = 2

[node name="GridContainer" type="GridContainer" parent="ColorRect/CenterContainer"]
layout_mode = 2
columns = 2

[node name="GameTimer" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="MenuButton" type="Button" parent="."]
layout_mode = 2
offset_left = 50.0
offset_top = 50.0
offset_right = 103.0
offset_bottom = 81.0
text = "Menu"

[node name="TimerLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 600.0
offset_top = 50.0
offset_right = 679.0
offset_bottom = 73.0
text = "Время: 30"
horizontal_alignment = 2

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
